# agentic-ai-blogger

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  alembic.ini  example_logging.py  pyproject.toml  pytest.ini  renovate.json  requirements.txt  test_llm_connection.py  test_markdown_strip.py
.github/workflows/: ci.yml
docs/: CI_CD_SETUP.md  DATABASE_SETUP.md  PYLINT_SETUP.md  RUFF_SETUP.md
integration_tests/: README.md  __init__.py  conftest.py
integration_tests/test_database/: test_crud.py  test_search_results.py
migrations/: env.py
migrations/versions/: 082d999d7910_baseline_schema.py
scripts/: autofix-reminder.sh  run_integration_tests.sh
src/: __init__.py
src/agents/: __init__.py  researcher.py  reviewer.py  revision.py  structure_planner.py  topic_scout.py  trend_analyzer.py  writer.py
src/database/: db.py  models.py
src/integrations/: llm_client.py  prompts.py
src/integrations/search/: __init__.py  arxiv_client.py  github_trending_client.py  google_trends_client.py  hackernews_client.py  normalizer.py  tavily_client.py
src/utils/: config.py  logging_config.py
src/workflow/: __init__.py  cli_helpers.py  error_handling.py  graph.py  graph_state.py  orchestrator.py  state.py
src/workflow/nodes/: __init__.py  analyze_trends.py  plan_structure.py  publish.py  research.py  review.py  revision.py  scout_topics.py  user_interaction.py  write_draft.py
tests/: conftest.py  test_config.py  test_logging.py
tests/test_agents/: test_researcher.py  test_reviewer.py  test_revision.py  test_structure_planner.py  test_topic_scout.py  test_trend_analyzer.py  test_writer.py
tests/test_database/: test_connection.py  test_crud.py  test_models.py  test_search_results.py
tests/test_llm/: test_basic_generation.py  test_structured_generation.py
tests/test_search/: __init__.py  test_arxiv_client.py  test_github_trending_client.py  test_google_trends_client.py  test_hackernews_client.py  test_normalizer.py  test_tavily_client.py
tests/test_workflow/: __init__.py  conftest.py  test_analyze_trends_node.py  test_error_handling.py  test_graph.py  test_graph_state.py  test_node_infrastructure.py  test_orchestrator.py  test_plan_structure_node.py  test_publish_node.py  test_research_node.py  test_review_node.py  test_revision_node.py  test_scout_topics_node.py  test_state.py  test_user_nodes.py  test_write_draft_node.py
