[tool.poetry]
name = "tech-article-generator"
version = "0.1.0"
description = "A minimal Python project for generating technical articles"
authors = ["Amit Upadhyay <amit.upadhyay021@outlook.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.0.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
litellm = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
ruff = "^0.14.10"
pre-commit = ">=3.5.0,<4.0.0"

[tool.ruff]
# Standard line length for Python projects
line-length = 100

# Exclude patterns
exclude = [
    ".env",
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable pycodestyle (E, W), pyflakes (F), and isort (I) rules
select = ["E", "F", "W", "I"]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Tests can have additional flexibility
"tests/**/*.py" = [
    "E501",  # line-too-long (tests can have long strings)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
